# phraser

./: .gitignore  Cargo.toml  LICENSE  README.md  Releases.md  TODO.md  platformio.ini
.github/workflows/: release.yml
include/: BlockCache.h  BlockDAO.h  BlockStore.h  DbBackup.h  DbCreate.h  DbRestore.h  DebugTest.h  DefaultDbInitializer.h  MainDbUi.h  MainPhraseUi.h  OnScreenKeyboard.h  PhraserUtils.h  Random.h  Registry.h  Schema_builder.h  Schema_generated.h  Schema_reader.h  Schema_verifier.h  ScreenKeyboard.h  ScreenList.h  SerialUtils.h  SpecialSymbolDrawer.h  StoreInitializer.h  StructBuf.h  TextAreaDialog.h  TextField.h  ThumbyUtils.h  UiCommon.h  Unseal.h
lib/my_crypt/: Adler.cpp  Adler.h  aes.c  constants.h  pbkdf2-sha1.cpp  pbkdf2-sha1.h  pbkdf2-sha256.cpp  pbkdf2-sha256.h  sha256.c  sha256.h  utils.c  utils.h
lib/my_data_structures/: arraylist.cpp  arraylist.h  c-list.h  (+7 more)
src/: BlockCache.cpp  BlockDAO.cpp  BlockStore.cpp  DbBackup.cpp  DbCreate.cpp  DbRestore.cpp  DbRuntime.cpp  DebugTest.cpp  DefaultDbInitializer.cpp  MainDbUi.cpp  MainFolderUi.cpp  MainPhraseUi.cpp  OnScreenKeyboard.cpp  PhraserMain.cpp  PhraserUtils.cpp  Random.cpp  Registry.cpp  RootTypeFinishingMethods.h  Schema_generated.h  ScreenKeyboard.cpp  ScreenList.cpp  ScreenSymbolDrawer.cpp  SerialUtils.cpp  SpecialSymbolDrawer.cpp  StoreInitializer.cpp  StructBuf.cpp  TextAreaDialog.cpp  TextField.cpp  ThumbyUtils.cpp  UiCommon.cpp  Unseal.cpp  flash_test.rs  graphic_test.rs  input_test.rs  keyboard_and_serial_test.rs  keyboard_test.rs  main.rs  music_test.rs  serial_test.rs  text_test.rs  (+4 more)
(+14 files in other folders)
