[package]
name = "blink"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-time = "0.12.0"
rp2040-boot2 = "0.3.0"
rp2040-hal = { version = "0.7.0", features = ["rt"] }
usb-device = "0.2.8"
usbd-serial = "0.1.1"
thumby = "0.0.3"
panic-halt = "^0"
embedded-graphics = "^0"
