[package]
name = "blink"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-time = "0.12.0"
rp2040-boot2 = "0.3.0"
rp2040-hal = { version = "0.7.0", features = ["rt"] }
rp2040-flash = "0.2.0"
usb-device = "0.2.8"
usbd-serial = "0.1.1"
panic-halt = "^0"
embedded-graphics = "^0"
rp-pico = "0.6.0"
heapless = "0.8.0"
ssd1306 = "0.8.4"
fugit = "0.3.7"
usbd-human-interface-device = "0.4.5"

[dependencies.frunk]
version = "0.4.2"
default-features = false
